# compa

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  index.html  start-backend.bat  start-backend.sh  start-frontend.bat  start.bat  start.sh
.github/workflows/: ci.yml
backend/: .env.example  Dockerfile  alembic.ini  mypy.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 4618dbf54f38_add_scraped_name_and_is_bundle_to_sale_.py  9f41a20f9a7e_initial_schema.py  a1b2c3d4e5f6_feedback_and_search_logs.py  a3f8e1d2c905_deduplicate_sale_events.py  c7d4e8f2a1b3_add_pg_trgm_fuzzy_search.py
backend/app/: main.py
backend/app/ai/: classifier.py  extractor.py  local_client.py  matcher.py  pipeline.py  translator.py
backend/app/api/: comparison.py  feedback.py  jobs.py  products.py  schemas.py
backend/app/core/: affiliate.py  config.py  database.py  fx.py  premium.py  proxy.py  seed.py
docs/: AUDIT-2026-06-10.md  BETA-TASKS.md  api.md  frontend.md  known-issues.md  schema.md  scrapers.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
plan-feedback/: index.html
plan-feedback/en/: index.html
plan-feedback/zh/: index.html
polypoly/: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml
polypoly/src/: clob_client.py  clock.py  fees.py  gamma_client.py  logger.py  market_filter.py  paper_engine.py  portfolio.py  reward_scoring.py  risk.py  storage.py  strategy.py  ws_client.py
polypoly/tests/: test_fees.py  test_paper_engine.py  test_risk.py  test_strategy.py
(+87 files in other folders)
